Tons of updates!

--- a/css/navigation.css
+++ b/css/navigation.css
@@ -67,6 +67,13 @@ li{
     margin-top: 8px;
     text-decoration: none;
 }
+.logo{
+    display: flex;
+    align-items: center;
+    gap: 8px;
+    text-decoration: none !important;
+}
+
 
 /* menu */
 
