--- a/css/styles.css
+++ b/css/styles.css
@@ -39,7 +39,7 @@ body {
 h1{
     color: var(--yellow);
     font-size: 7vw;
-    letter-spacing: 14px;
+    letter-spacing: 9px;
     margin: 0 10px;
     line-height: 9vw;
     text-align: center;
@@ -58,7 +58,7 @@ h4{
     color: #333;
     font-weight: 600;
     font-size: 1.2rem;
-    line-height: 1rem;
+    line-height: 0.8rem;
     margin: 8px 0;
 }
 
@@ -66,6 +66,10 @@ p, .ingredients ul li{
     color: #4B4B4B;
     font-size: 20px;
     margin: 8px 0;
+}
+
+.ingredients ul li {
+    font-size: 18px !important;
 }
 
 footer{
@@ -181,6 +185,10 @@ footer{
     gap: 8px;
     align-items: center;
     margin: 0;
+}
+
+.cuisine, .diet {
+    align-items: flex-start;
 }
 
 .diet div, .cuisine div{
