--- a/css/styles.css
+++ b/css/styles.css
@@ -34,6 +34,7 @@ body {
 .center{
     display: flex;
     justify-content: center;
+    gap: 1rem;
 }
 
 h1{
@@ -62,7 +63,7 @@ h4{
     margin: 8px 0;
 }
 
-p, .ingredients ul li{
+p, .ingredients ul li, .case-study-sect li{
     color: #4B4B4B;
     font-size: 20px;
     margin: 8px 0;
@@ -77,6 +78,14 @@ footer{
     width: 100%;
     padding: 0 20px;
     margin-top: auto;
+    display: flex;
+    justify-content: space-between;
+}
+
+.footerlinks{
+    display: flex;
+    flex-direction: column;
+    align-items: end;
 }
 
 
@@ -508,6 +517,23 @@ form{
     width: 100%;
 }
 
+/*CASE STUDY*/
+
+.cover-img{
+    width: 100%;
+    margin: 1rem 0;
+}
+
+.case-study-sect{
+    background-color: var(--grey);
+}
+.style-tile-2{
+    background-color: var(--background);
+    padding-top: 1rem;
+    padding-right: 1rem;
+    padding-left: 1rem;
+}
+
 
 @media(max-width: 850px){
     .search-container {
@@ -590,5 +616,16 @@ form{
 @media(max-width: 500px){
     .search {
         width: 65vw;
+    }
+
+    footer{
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+    
+    .footerlinks{
+        display: flex;
+        align-items: center;
     }
 }
