--- a/css/styles.css
+++ b/css/styles.css
@@ -481,6 +481,7 @@ form{
     cursor: pointer;
     font-weight: 600;
     transition: transform 0.3s ease;
+    text-align: center;
 }
 
 .button:hover {
